--- a/src/app/reader.css
+++ b/src/app/reader.css
@@ -1,25 +1,32 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #F4F5F7;
+}
+
 .app {
-    position: fixed;
     width: 80%;
     height: 800px;
-    top: 50px;
-    left: 0;
-    right: 0;
-    margin: auto;
     padding: 50px;
     border-radius: 20px;
     background-color: #FFF;
 }
 
 .view {
-    width: 500px; 
-    height: 700px; 
-    overflow: hidden;
-    position: fixed;
+    width: 100%;
+    height: 660px;
+    display: flex;
+    justify-content: space-around;
     background-color: #FFF;
-  }
+    word-wrap: break-word;
+}
 
-.view img, .view div, .view image {
+.view img,
+.view div,
+.view image {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
