--- a/src/app/reader.css
+++ b/src/app/reader.css
@@ -12,6 +12,7 @@ body {
     height: 800px;
     padding: 50px;
     border-radius: 20px;
+    position: relative;
     background-color: #FFF;
 }
 
@@ -39,4 +40,15 @@ body {
     height: 100%;
     object-fit: contain;
     box-sizing: border-box;
+}
+
+.uploadEpub {
+    position: absolute;
+    top: -50px;
+    left: 0px;
+}
+
+.titlePage {
+    width: 50%;
+    text-align: center;
 }
