--- a/app/globals.css
+++ b/app/globals.css
@@ -86,80 +86,79 @@
 
   body {
     @apply bg-background text-foreground;
-    font-family: 'SourceHanSerifCN-Bold', serif;
   }
 }
 
 @layer base {
   @font-face {
-    font-family: 'SiYuanSongTi';
+    font-family: "SiYuanSongTi";
     font-style: normal;
-    src: url(/fonts/Chinese/SourceHanSerifCN-Medium-6.otf) format('opentype');
+    src: url(/fonts/Chinese/SourceHanSerifCN-Medium-6.otf) format("opentype");
   }
 
   @font-face {
-    font-family: 'FangZhengKaiTi';
+    font-family: "FangZhengKaiTi";
     font-style: normal;
-    src: url(/fonts/Chinese/FangZhengKaiTiJianTi-1.ttf) format('truetype');
+    src: url(/fonts/Chinese/FangZhengKaiTiJianTi-1.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'SiYuanHeiTi';
+    font-family: "SiYuanHeiTi";
     font-style: normal;
-    src: url(/fonts/Chinese/SourceHanSansSC-Normal-2.otf) format('opentype');
+    src: url(/fonts/Chinese/SourceHanSansSC-Normal-2.otf) format("opentype");
   }
 
   @font-face {
-    font-family: 'XiaLuZhenKai';
+    font-family: "XiaLuZhenKai";
     font-style: normal;
-    src: url(/fonts/Chinese/XiaLuZhenKai.ttf) format('truetype');
+    src: url(/fonts/Chinese/XiaLuZhenKai.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'HanZiPinYin';
+    font-family: "HanZiPinYin";
     font-style: normal;
-    src: url(/fonts/Chinese/HanZiPinYin.ttf) format('truetype');
+    src: url(/fonts/Chinese/HanZiPinYin.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'JiangChengYuanTi';
+    font-family: "JiangChengYuanTi";
     font-style: normal;
-    src: url(/fonts/Chinese/JiangChengYuanTi.ttf) format('truetype');
+    src: url(/fonts/Chinese/JiangChengYuanTi.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'LinHaiLiShu';
+    font-family: "LinHaiLiShu";
     font-style: normal;
-    src: url(/fonts/Chinese/LinHaiLiShu.ttf) format('truetype');
+    src: url(/fonts/Chinese/LinHaiLiShu.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'Comfortaa';
+    font-family: "Comfortaa";
     font-style: normal;
-    src: url(/fonts/English/Comfortaa-Medium.ttf) format('truetype');
+    src: url(/fonts/English/Comfortaa-Medium.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'FrederickatheGreat';
+    font-family: "FrederickatheGreat";
     font-style: normal;
-    src: url(/fonts/English/FrederickatheGreat.ttf) format('truetype');
+    src: url(/fonts/English/FrederickatheGreat.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'RobotoSlab';
+    font-family: "RobotoSlab";
     font-style: normal;
-    src: url(/fonts/English/RobotoSlab-Medium.ttf) format('truetype');
+    src: url(/fonts/English/RobotoSlab-Medium.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'Merienda';
+    font-family: "Merienda";
     font-style: normal;
-    src: url(/fonts/English/Merienda-Regular.ttf) format('truetype');
+    src: url(/fonts/English/Merienda-Regular.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'ComicNeueAngular';
+    font-family: "ComicNeueAngular";
     font-style: normal;
-    src: url(/fonts/English/ComicNeueAngular-Regular.ttf) format('truetype');
+    src: url(/fonts/English/ComicNeueAngular-Regular.ttf) format("truetype");
   }
 }
